; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_ensure_capacity.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_ensure_capacity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.obs_data_item* (%struct.obs_data_item*)* @obs_data_item_ensure_capacity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.obs_data_item* @obs_data_item_ensure_capacity(%struct.obs_data_item* %0) #0 {
  %2 = alloca %struct.obs_data_item*, align 8
  %3 = alloca %struct.obs_data_item*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.obs_data_item*, align 8
  store %struct.obs_data_item* %0, %struct.obs_data_item** %3, align 8
  %6 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %7 = call i64 @obs_data_item_total_size(%struct.obs_data_item* %6)
  store i64 %7, i64* %4, align 8
  %8 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %9 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp uge i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  store %struct.obs_data_item* %14, %struct.obs_data_item** %2, align 8
  br label %26

15:                                               ; preds = %1
  %16 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %17 = load i64, i64* %4, align 8
  %18 = call %struct.obs_data_item* @brealloc(%struct.obs_data_item* %16, i64 %17)
  store %struct.obs_data_item* %18, %struct.obs_data_item** %5, align 8
  %19 = load i64, i64* %4, align 8
  %20 = load %struct.obs_data_item*, %struct.obs_data_item** %5, align 8
  %21 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  %22 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %23 = load %struct.obs_data_item*, %struct.obs_data_item** %5, align 8
  %24 = call i32 @obs_data_item_reattach(%struct.obs_data_item* %22, %struct.obs_data_item* %23)
  %25 = load %struct.obs_data_item*, %struct.obs_data_item** %5, align 8
  store %struct.obs_data_item* %25, %struct.obs_data_item** %2, align 8
  br label %26

26:                                               ; preds = %15, %13
  %27 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  ret %struct.obs_data_item* %27
}

declare dso_local i64 @obs_data_item_total_size(%struct.obs_data_item*) #1

declare dso_local %struct.obs_data_item* @brealloc(%struct.obs_data_item*, i64) #1

declare dso_local i32 @obs_data_item_reattach(%struct.obs_data_item*, %struct.obs_data_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
